upgrade discord4j on chodebot