@@ -1,18 +1,9 @@
 package com.gmo.discord.codenames.bot;
 
-import java.io.ByteArrayInputStream;
-import java.io.IOException;
-import java.io.UncheckedIOException;
-import java.time.Clock;
-import java.util.Arrays;
-import java.util.List;
-
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import com.gmo.discord.codenames.bot.command.AbandonCommand;
 import com.gmo.discord.codenames.bot.command.ClueCommand;
 import com.gmo.discord.codenames.bot.command.CurrentStateCommand;
+import com.gmo.discord.codenames.bot.command.DMCommand;
 import com.gmo.discord.codenames.bot.command.GuessCommand;
 import com.gmo.discord.codenames.bot.command.JoinGameCommand;
 import com.gmo.discord.codenames.bot.command.LeaveGameCommand;
@@ -21,47 +12,32 @@ import com.gmo.discord.codenames.bot.command.NextGameCommand;
 import com.gmo.discord.codenames.bot.command.PassCommand;
 import com.gmo.discord.codenames.bot.command.StartGameCommand;
 import com.gmo.discord.codenames.bot.store.CodeNamesStore;
-import com.gmo.discord.codenames.bot.store.InMemoryCodeNamesStore;
+import com.gmo.discord.support.command.Command;
 import com.gmo.discord.support.command.CommandInfo;
-import com.gmo.discord.support.command.ICommand;
-import com.gmo.discord.support.message.DiscordMessage;
-import com.google.common.collect.ImmutableList;
-import sx.blah.discord.api.ClientBuilder;
-import sx.blah.discord.api.IDiscordClient;
-import sx.blah.discord.api.events.EventSubscriber;
-import sx.blah.discord.handle.impl.events.ReadyEvent;
-import sx.blah.discord.handle.impl.events.guild.channel.message.MessageReceivedEvent;
-import sx.blah.discord.handle.obj.IChannel;
-import sx.blah.discord.handle.obj.IGuild;
-import sx.blah.discord.handle.obj.IMessage;
-import sx.blah.discord.handle.obj.IUser;
-import sx.blah.discord.util.DiscordException;
-import sx.blah.discord.util.MissingPermissionsException;
-import sx.blah.discord.util.RateLimitException;
+import discord4j.core.event.domain.message.MessageCreateEvent;
+import discord4j.core.object.entity.Guild;
+import discord4j.core.object.entity.Member;
+import discord4j.core.object.entity.Message;
+import discord4j.core.object.entity.channel.Channel;
+import discord4j.discordjson.json.ImmutableMessageCreateRequest;
+import discord4j.rest.util.MultipartRequest;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import reactor.core.publisher.Mono;
+
+import java.io.ByteArrayInputStream;
+import java.time.Clock;
+import java.util.Arrays;
+import java.util.List;
+import java.util.stream.StreamSupport;
 
 public class DiscordCodeNamesBot {
     private static final Logger LOGGER = LoggerFactory.getLogger(DiscordCodeNamesBot.class);
 
-    private static IDiscordClient client;
-
-    public static void main(String[] args) throws DiscordException, RateLimitException {
-        final String token = System.getenv("CODENAMES_BOT_TOKEN");
-        if (token == null || token.isEmpty()) {
-            throw new IllegalStateException("Could not get bot token");
-        }
-
-        final CodeNamesStore codeNamesStore = new InMemoryCodeNamesStore();
-
-        System.out.println("Logging bot in...");
-        client = new ClientBuilder().withToken(token).build();
-        client.getDispatcher().registerListener(new DiscordCodeNamesBot(codeNamesStore));
-        client.login();
-    }
-
-    private final List<ICommand> commandList;
+    private final List<Command> commands;
 
     public DiscordCodeNamesBot(final CodeNamesStore gameStore) {
-        this.commandList = ImmutableList.of(
+        this.commands = List.of(
                 new AbandonCommand(gameStore),
                 new ClueCommand(gameStore),
                 new CurrentStateCommand(gameStore),
@@ -71,22 +47,17 @@ public class DiscordCodeNamesBot {
                 new NewGameCommand(gameStore),
                 new NextGameCommand(gameStore),
                 new PassCommand(gameStore),
-                new StartGameCommand(gameStore));
+                new StartGameCommand(gameStore),
+                new DMCommand());
     }
 
-    @EventSubscriber
-    public void onReady(final ReadyEvent event) {
-        System.out.println("Bot is now ready!");
-    }
-
-    @EventSubscriber
-    public void onMessage(final MessageReceivedEvent event) throws RateLimitException, DiscordException, MissingPermissionsException {
-        final IMessage message = event.getMessage();
-        final IUser user = message.getAuthor();
-        final IChannel channel = message.getChannel();
-        final IGuild guild = message.getGuild();
-        if (user.isBot()) {
-            return;
+    public Mono<Void> onMessage(final MessageCreateEvent event) {
+        final Message message = event.getMessage();
+        final Member member = message.getAuthorAsMember().block();
+        final Channel channel = message.getChannel().block();
+        final Guild guild = message.getGuild().block();
+        if (member == null || member.isBot()) {
+            return Mono.empty();
         }
 
         try {
@@ -97,42 +68,45 @@ public class DiscordCodeNamesBot {
             final CommandInfo commandInfo = CommandInfo.newBuilder()
                     .withChannel(channel)
                     .withGuild(guild)
-                    .withMessage(message)
+                    .withMessage(message.getContent())
                     .withArgs(args)
                     .withCommand(command)
-                    .withUser(message.getAuthor())
+                    .withMember(member)
                     .build();
-
-            commandList.stream().filter(t -> t.canHandle(commandInfo)).findFirst().ifPresent(cmd -> {
-                try {
-                    for (final DiscordMessage response : cmd.execute(commandInfo)) {
-                        sendMessage(response, response.getDirectRecipient().<IChannel>map(IUser::getOrCreatePMChannel).orElse(channel));
-                    }
-                } catch (final Exception e) {
-                    LOGGER.error("Something bad happened executing the command " + commandInfo.toString(), e);
-                }
-            });
+            try {
+                return commands.stream().filter(t -> t.canExecute(commandInfo))
+                        .findFirst()
+                        .map(c -> c.execute(commandInfo))
+                        .map(messages ->
+                                StreamSupport.stream(messages.spliterator(), false)
+                                        .map(m -> m.getDirectRecipient()
+                                                .<Mono<? extends Channel>>map(Member::getPrivateChannel)
+                                                .orElse(message.getChannel())
+                                                .flatMap(ch -> {
+                                                    if (m.getEmbed().isPresent()) {
+                                                        return ch.getRestChannel().createMessage(m.getEmbed().get().toEmbedData());
+                                                    } else if (m.getContent().isPresent()) {
+                                                        final MultipartRequest multipartRequest = new MultipartRequest(
+                                                                ImmutableMessageCreateRequest.builder().content(m.getText().orElse("")).build(),
+                                                                "chodeNames-" + Clock.systemUTC().millis() + ".png",
+                                                                new ByteArrayInputStream(m.getContent().get()));
+                                                        return ch.getRestChannel().createMessage(multipartRequest);
+                                                    } else if (m.getText().isPresent()) {
+                                                        return ch.getRestChannel().createMessage(m.getText().get());
+                                                    }
+                                                    return Mono.empty();
+                                                }))
+                                        .reduce(Mono.empty(), Mono::then)
+                                        .doOnError(e -> LOGGER.error("Error occurred sending messages", e))
+                                        .then())
+                        .orElse(Mono.empty());
+            } catch (final Exception e) {
+                LOGGER.error("Something bad happened executing the command " + commandInfo.toString(), e);
+                return Mono.empty();
+            }
         } catch (final Exception e) {
             LOGGER.error("Exception processing message: " + message.getContent(), e);
-        }
-    }
-
-    private void sendMessage(final DiscordMessage resultMessage,
-                             final IChannel channel) {
-        if (resultMessage.getContent().isPresent()) {
-            resultMessage.getContent().ifPresent(content -> {
-                try (final ByteArrayInputStream bis = new ByteArrayInputStream(content)) {
-                    channel.sendFile(resultMessage.getText().orElse(""),
-                            bis,
-                            "chodeNames-" + Clock.systemUTC().millis() + ".png");
-                } catch (final IOException e) {
-                    throw new UncheckedIOException(e);
-                }
-            });
-        } else if (resultMessage.getEmbedObject().isPresent()) {
-            resultMessage.getEmbedObject().ifPresent(channel::sendMessage);
-        } else if (resultMessage.getText().isPresent()) {
-            resultMessage.getText().ifPresent(channel::sendMessage);
+            return Mono.empty();
         }
     }
 }
